--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Javascript 1 Visual studio code!</h1>
+    <input type="button"
 <script src="main.js"></script>
 </body>
 </html>
