satte in paragrafer i html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Javascript 1 Visual studio code!</h1>
+    <h1>Git Basic Commands</h1>
     <input type="button"
+
+    <p>dir   >>> Visar vilka filer du har i mappen</p>
+    <p>git init >>>  initierar Repository</p> 
+    <p>git status</p>
+    <p>git add index.html</p>
+    <p>git status</p>
+    <p>git commit -m "i added the html file" >>>slår ihop paket med fil </p>
+    <p>git config --global user.name Spindelmannen</p>
+    <p>git config --global user.email jonteadolfsson1995@gmail.com</p>
+
+    <p>git config --global user.name</p>
+    <p>git config --global user.email</p>
+    <p>git add main.js</p>
+    <p>git commit -m "added js-file"</p>
+    <p>git remote add origin https://github.com/Spindelmannen/Repo-test.git</p>
+    <p>git push -u origin master</p>
+    <p>git remote -v</p>
+    <p>git log</p>
+
+    <P>Om du uppdaterar en fil. spara och sedan skriv i terminalen t.ex.
+    git add index.html (Lägger till nya html)
+    git commit -m "uppdaterade html filen lite" (packar ihop filen med en kommentar)
+    git push  (pushar upp nya filen till github)
+    </P>
+
+    <p>git add >>> git commit -m >>> git push</p>
+
 <script src="main.js"></script>
 </body>
 </html>
